--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.17.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
